fixed a typo in English

--- a/src/main/java/net/clementlevallois/nocodeapp/web/front/resources/i18n/text_en.properties
+++ b/src/main/java/net/clementlevallois/nocodeapp/web/front/resources/i18n/text_en.properties
@@ -724,7 +724,7 @@ pdfmatcher.results.tagline=Match terms of interest in pdf files - results
 pdfmatcher.pdfmatcher.tagline=No special paramater for this function. Click the button to continue.
 index.button.pdfmatcher=\ud83c\udfaf Find terms in pdf files
 index.button.gaze=\ud83d\udd27 create networks from lists
-index.button.labelling=\u270d\ufe0f Tool for data annotatio
+index.button.labelling=\u270d\ufe0f Tool for data annotation
 index.button.highlighter=\ud83c\udfa8 highlight text with css
 index.calltochooseafunction=choose a function:
 general.verbs.open_report=open the report
