started adding elevated access

--- a/i18n/src/main/resources/text_en.properties
+++ b/i18n/src/main/resources/text_en.properties
@@ -64,7 +64,7 @@ delight.results.tagline=Detection of 'delight' in English social media texts - r
 delight.tool.description=Free tool to identify 'delight' as an emotion in texts from English social media.
 delight.tool.tagline=\ud83d\ude0a \ud83d\ude02 \ud83d\udc4d Free tool to identify delight in texts, for social media in English
 delight.tool.title=Identify the emotion 'delight' in texts, free and online. Opinion mining for non coders.
-gaze.network_builder.apply_pmi_correction=Apply a <a href\="https\://en.wikipedia.org/wiki/Pointwise_mutual_information" target\="_blank">Pointwise Mutual Correction (PMI) correction</a> to the connections of the network.\n
+gaze.network_builder.apply_pmi_correction=Apply a <a href\="https://nocodefunctions.com/blog/pmi-tf-idf/#pointwise-mutual-information-the-solution-to-discount-edges-with-low-information" target\="_blank">Pointwise Mutual Correction (PMI) correction</a> to the connections of the network.\n
 gaze.network_builder.connections_should_have_min_targets_in_common=You can decide that to create a connection, 2 sources should have a least a number of targets in common. The default minimum value is one.
 gaze.network_builder.description=100% free online tool to create networks from lists
 gaze.network_builder.go_with_option=Choose option
